force-app/main/default/objects/Topic__c/Topic__c.object-meta.xml
<CustomObject>
    <label>Topic</label>
    <nameField>
        <displayFormat>TOPIC-{0000}</displayFormat>
        <label>Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>