force-app/main/default/objects/Topic__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <formula>Title__c + &#39;_&#39; +  TEXT(Project_Topics_Count__c)  + &#39;_&#39; + TEXT(Project_Topics_Selected_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label</label>
    <type>Text</type>
</CustomField>