force-app/main/default/objects/Topic__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <referenceTo>Language__c</referenceTo>
    <relationshipLabel>Topics</relationshipLabel>
    <relationshipName>Topics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>