force-app/main/default/objects/Topic__c/fields/Project_Topics_Count__c.field-meta.xml
<CustomField>
    <fullName>Project_Topics_Count__c</fullName>
    <label>Project Topics Count</label>
    <summaryForeignKey>Project_Topic__c.Topic__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>