force-app/main/default/objects/Topic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>contains</operation>
        <value>JavaScript</value>
    </filters>
    <filters>
        <field>Language__c</field>
        <operation>contains</operation>
        <value>SFDC LGTN</value>
    </filters>
    <label>All</label>
</ListView>